Sat Apr 30 06:25:16 2016  Vladimir Makarov  <vmakarov@redhat.com>

	* include/ruby/st.h (MAX_ST_INDEX_VAL, st_table_entry): New.
	(ST_INDEX_BITS): Remove.
	(struct st_table): Add fields entry_power, bin_power, size_ind,
	rebuilds_num, bins, entries_start, entries_bound, and entries.
	Remove fields num_bins, entries_packed, as.  Remove bit field
	length from num_entries.
	(st_reverse_foreach): Remove.
	* st.c: Rewrite top comment.  Don't include ccan/list/list.h.
	Include <assert.h>.
	(PREFETCH, EXPECT, ATTRIBUTE_UNUSED, st_assert, st_hash_t): New.
	(struct st_table_entry): Use st_hash_t for hash.  Remove next and
	olist.
	(struct st_packed_entry, ST_DEFAULT_MAX_DENSITY): Remove.
	(ST_DEFAULT_INIT_TABLE_SIZE, ST_DEFAULT_PACKED_TABLE_SIZE): Remove.
	(PACKED_UNIT): Remove.
	(STATIC_ASSERT): Remove definition and usages.
	(ST_INIT_VAL, ST_INIT_VAL_BYTE): New.
	(malloc, calloc, realloc, free): Redefine as ruby_xmalloc,
	ruby_xcalloc, ruby_xrealloc, and ruby_xfree.
	(EQUAL): Redefine.
	(do_hash): Redefine.
	(st_alloc_entry, st_free_entry, st_alloc_table, st_dealloc_table): Remove.
	(st_alloc_bins, calloc, st_free_bins, st_realloc_bins): Remove.
	(bins,real_entries, PACKED_BINS, PACKED_ENT, PACKED_BINS, PKEY):
	Remove.
	(PVAL, PHASH, PKEY_SET, PVAL_SET, PHASH_SET, remove_packed_entry):
	Remove.
	(remove_safe_packed_entry, next_pow2): Remove.
	(PTR_EQUAL, struct st_features, MAX_POWER2, features)
	(RESERVED_HASH_VAL, RESERVED_HASH_SUBSTITUTION_VAL): New.
	(new_size): Remove.
	(MINIMAL_POWER2, MAX_POWER2_FOR_TABLES_WITHOUT_BINS, get_power2): New.
	(get_bin, set_bin, EMPTY_BIN, DELETED_BIN, ENTRY_BASE): New.
	(MARK_BIN_EMPTY, UNDEFINED_ENTRY_IND, UNDEFINED_BIN_IND): New.
	(MARK_BIN_DELETED, EMPTY_BIN_P, DELETED_BIN_P): New.
	(EMPTY_OR_DELETED_BIN_P, IND_EMPTY_BIN_P, IND_DELETED_BIN_P): New.
	(IND_EMPTY_OR_DELETED_BIN_P, MARK_ENTRY_DELETED, DELETED_ENTRY_P):
	New.
	(get_size_ind, get_bins_num, bins_mask, hash_bin): New.